{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 99,
  "lineage": "e520c51a-d494-5d23-35bf-eec9edc90ca4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].useast1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0880df0ee16887f7f",
            "arn": "arn:aws:ec2:us-east-1:958661899676:elastic-ip/eipalloc-0880df0ee16887f7f",
            "domain": "vpc",
            "id": "eipalloc-0880df0ee16887f7f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-28-246-66.compute-1.amazonaws.com",
            "public_ip": "100.28.246.66",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:958661899676:instance/i-0753e00733b1dc7e4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0753e00733b1dc7e4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-041b073c88b6506e2",
            "private_dns": "ip-10-0-1-191.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.191",
            "public_ip": "54.157.133.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d77510f184cdb45e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5f26d13d1166b61",
            "tags": {
              "Name": "public-server"
            },
            "tags_all": {
              "Name": "public-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08aacf6a0341012be"
            ]
          },
          "dependencies": [
            "aws_key_pair.default",
            "aws_security_group.allow_ssh",
            "aws_subnet.useast1_public",
            "aws_vpc.useast1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06b21ccaeff8cd686",
            "arn": "arn:aws:ec2:us-east-1:958661899676:instance/i-094c14cdabc2a82bb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094c14cdabc2a82bb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-067a9e10418860b87",
            "private_dns": "ip-10-0-3-198.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0999ed7e743826712",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073cbe92be1a15ec6",
            "tags": {
              "Name": "private-server"
            },
            "tags_all": {
              "Name": "private-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08aacf6a0341012be"
            ]
          },
          "dependencies": [
            "aws_key_pair.default",
            "aws_security_group.allow_ssh",
            "aws_subnet.useast1_private",
            "aws_vpc.useast1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].useast1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:internet-gateway/igw-085b0143326c5a4b0",
            "id": "igw-085b0143326c5a4b0",
            "owner_id": "958661899676",
            "tags": {
              "Name": "gw1"
            },
            "tags_all": {
              "Name": "gw1"
            },
            "vpc_id": "vpc-03b4c1a5319407fb8"
          },
          "dependencies": [
            "aws_vpc.useast1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc1_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:route-table/rtb-0679dca591e25251f",
            "id": "rtb-0679dca591e25251f",
            "owner_id": "958661899676",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-085b0143326c5a4b0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03b4c1a5319407fb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw1",
            "aws_vpc.useast1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b15cf529465a4096",
            "route_table_id": "rtb-0679dca591e25251f",
            "subnet_id": "subnet-0d5f26d13d1166b61"
          },
          "dependencies": [
            "aws_internet_gateway.gw1",
            "aws_route_table.vpc1_route_table",
            "aws_subnet.useast1_public",
            "aws_vpc.useast1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:security-group/sg-08aacf6a0341012be",
            "description": "Allow SSH inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08aacf6a0341012be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "958661899676",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03b4c1a5319407fb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.useast1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "useast1_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].useast1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:subnet/subnet-073cbe92be1a15ec6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073cbe92be1a15ec6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958661899676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "useast1_private"
            },
            "tags_all": {
              "Name": "useast1_private"
            },
            "vpc_id": "vpc-03b4c1a5319407fb8"
          },
          "dependencies": [
            "aws_vpc.useast1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:subnet/subnet-0efda22333586b8ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efda22333586b8ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958661899676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "useast1_private"
            },
            "tags_all": {
              "Name": "useast1_private"
            },
            "vpc_id": "vpc-03b4c1a5319407fb8"
          },
          "dependencies": [
            "aws_vpc.useast1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "useast1_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].useast1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:subnet/subnet-0d5f26d13d1166b61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5f26d13d1166b61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958661899676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "useast1_public"
            },
            "tags_all": {
              "Name": "useast1_public"
            },
            "vpc_id": "vpc-03b4c1a5319407fb8"
          },
          "dependencies": [
            "aws_vpc.useast1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:subnet/subnet-0f6a32b75f20b606b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6a32b75f20b606b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958661899676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "useast1_public"
            },
            "tags_all": {
              "Name": "useast1_public"
            },
            "vpc_id": "vpc-03b4c1a5319407fb8"
          },
          "dependencies": [
            "aws_vpc.useast1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "useast1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].useast1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:vpc/vpc-03b4c1a5319407fb8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0053456ad2558590e",
            "default_route_table_id": "rtb-0a4a4dda0677cf399",
            "default_security_group_id": "sg-0805179fc4693e488",
            "dhcp_options_id": "dopt-84beeeff",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03b4c1a5319407fb8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a4a4dda0677cf399",
            "owner_id": "958661899676",
            "tags": {
              "Name": "vpc1"
            },
            "tags_all": {
              "Name": "vpc1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:security-group-rule/sgr-04ef7b86cf9b20f05",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04ef7b86cf9b20f05",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-08aacf6a0341012be",
            "security_group_rule_id": "sgr-04ef7b86cf9b20f05",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_vpc.useast1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:security-group-rule/sgr-013ee431e5cff22d3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-013ee431e5cff22d3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-08aacf6a0341012be",
            "security_group_rule_id": "sgr-013ee431e5cff22d3",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_vpc.useast1"
          ]
        }
      ]
    }
  ]
}